--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ std = []
 # besides bringing in an unused dependency, as `std::backtrace` is always
 # preferred.
 backtrace = { version = "0.3.51", optional = true }
+axum = { version = "0.7", default-features = false }
 
 [dev-dependencies]
 futures = { version = "0.3", default-features = false }
